--- a/roles/homebrew-cask/tasks/main.yml
+++ b/roles/homebrew-cask/tasks/main.yml
@@ -13,6 +13,8 @@
 - name: Ensure the homebrew cask packages installed
   homebrew_cask:
     name={{ item.name }}
-    state={{ item.state | default('latest')}}
+    state={{ item.state | default('present')}}
   with_items: homebrew_cask_packages
   when: homebrew_cask_packages
+
+- include: ricty.yml
