--- a/roles/homebrew/defaults/main.yml
+++ b/roles/homebrew/defaults/main.yml
@@ -2,12 +2,10 @@
 homebrew_repositories:
   - homebrew/binary
   - homebrew/versions
-  - caskroom/homebrew-cask
   - sanemat/font
 
 homebrew_packages:
   - { name: brew-cask }
-  - { name: Caskroom/cask/xquartz }
   - { name: ansible }
   - { name: jq }
   - { name: nkf }
@@ -22,15 +20,15 @@ homebrew_packages:
   - { name: zsh }
   - { name: peco }
   - { name: python }
-  - { name: python-virtualenv }
-#  - { name: mysql }
-#  - { name: postgresql }
+  - { name: pyenv-virtualenv }
+  # - { name: mysql }
+  # - { name: postgresql }
   - { name: rbenv }
   - { name: ruby-build }
   - { name: automake }
-#  - { name: go }
-#  - { name: tmux }
-#  - { name: ffmpeg, install_option: with-fdk-aac, with-ffplay, with-freetype, with-frei0r, with-libass, with-libbluray, with-libcaca, with-libquvi, with-libvidstab, with-libvo-aacenc, with-libvorbis, with-libvpx, with-opencore-amr, with-openjpeg, with-openssl, with-opus, with-rtmpdump, with-schroedinger, with-speex, with-theora, with-tools, with-x265 }
-#  - { name: gnuplot, install_option: with-x11, with-png }
-#  - { name: jenkins }
-#  - { name: jmeter }
+  # - { name: go }
+  # - { name: tmux }
+  # - { name: ffmpeg, install_option: with-fdk-aac, with-ffplay, with-freetype, with-frei0r, with-libass, with-libbluray, with-libcaca, with-libquvi, with-libvidstab, with-libvo-aacenc, with-libvorbis, with-libvpx, with-opencore-amr, with-openjpeg, with-openssl, with-opus, with-rtmpdump, with-schroedinger, with-speex, with-theora, with-tools, with-x265 }
+  # - { name: gnuplot, install_option: with-x11, with-png }
+  # - { name: jenkins }
+  # - { name: jmeter }
