--- a/roles/homebrew-cask/tasks/main.yml
+++ b/roles/homebrew-cask/tasks/main.yml
@@ -1,20 +1,18 @@
 ---
 - name: Ensure homebrew-cask repositories tapped
   homebrew_tap: tap={{ item }} state=present
-  with_items: homebrew_cask_repositories
+  with_items: "{{ homebrew_cask_repositories | default([]) }}"
   when: homebrew_cask_repositories
 
 - name: Update homebrew
   homebrew: update_homebrew=yes
 
-- name: Ensure brew-cask installed
-  homebrew: name=brew-cask state=latest
+- include: ricty.yml
 
 - name: Ensure the homebrew cask packages installed
   homebrew_cask:
     name={{ item.name }}
     state={{ item.state | default('present')}}
-  with_items: homebrew_cask_packages
+  with_items: "{{ homebrew_cask_packages | default([]) }}"
   when: homebrew_cask_packages
 
-- include: ricty.yml
