--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Ensure homebrew repositories tapped
   homebrew_tap: tap={{ item }} state=present
-  with_items: homebrew_repositories
+  with_items: "{{ homebrew_repositories | default([]) }}"
   when: homebrew_repositories
 
 - name: Update homebrew
@@ -12,5 +12,5 @@
     name={{ item.name }}
     state={{ item.state | default('latest')}}
     install_options={{ item.install_options | default(omit) }}
-  with_items: homebrew_packages
+  with_items: "{{ homebrew_packages | default([]) }}"
   when: homebrew_packages
