update homebrew cask

--- a/roles/homebrew-cask/defaults/main.yml
+++ b/roles/homebrew-cask/defaults/main.yml
@@ -33,3 +33,6 @@ homebrew_cask_packages:
   # - { name: skitch }
   # - { name: gyazo }
   - { name: zoomus }
+  - { name: postman }
+  - { name: realm-browser }
+
