--- a/roles/homebrew-cask/defaults/main.yml
+++ b/roles/homebrew-cask/defaults/main.yml
@@ -6,25 +6,25 @@ homebrew_cask_repositories:
 homebrew_cask_packages:
   - { name: alfred }
   - { name: google-chrome }
-  - { name: dropbox }
+  # - { name: dropbox }
   - { name: evernote }
   - { name: iterm2 }
   - { name: google-japanese-ime }
   - { name: karabiner-elements }
   - { name: android-studio }
-  - { name: mysqlworkbench }
+  # - { name: mysqlworkbench }
   - { name: vagrant }
   - { name: virtualbox }
   # - { name: ifunbox }
   - { name: firefox }
   - { name: visual-studio-code }
-  - { name: sublime-text }
+  # - { name: sublime-text }
   # - { name: wireshark }
   - { name: slack }
   # - { name: inkscape }
   - { name: gimp }
-  # - { name: mactex }
-  - { name: thunderbird }
+  - { name: mactex }
+  # - { name: thunderbird }
   # - { name: bittorrent-sync }
   # - { name: rubymine }
   # - { name: openoffice }
@@ -35,4 +35,6 @@ homebrew_cask_packages:
   - { name: zoomus }
   - { name: postman }
   - { name: realm-browser }
-
+  - { name: docker }
+  - { name: font-hackgen }
+  - { name: notion }
