--- a/roles/homebrew-cask/defaults/main.yml
+++ b/roles/homebrew-cask/defaults/main.yml
@@ -11,7 +11,6 @@ homebrew_cask_packages:
   - { name: karabiner-elements }
   - { name: android-studio }
   - { name: vagrant }
-  - { name: virtualbox }
   - { name: visual-studio-code }
   - { name: slack }
   - { name: gimp }
@@ -24,11 +23,8 @@ homebrew_cask_packages:
   - { name: font-hackgen }
   - { name: notion }
   - { name: mathpix-snipping-tool }
-  - { name: google-backup-and-sync }
+  - { name: google-drive }
   - { name: figma }
   - { name: mi }
   - { name: discord }
   - { name: deepl }
-  - { name: zoomus }
-  - { name: youtube-dl }
-  
